[package]
name = "eventloop_async_research"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[workspace]
members = ["macros"]

[[example]]
name = "tcp_server_async"
path = "examples/tcp_server_async.rs"

[[example]]
name = "kv_server_async"
path = "examples/kv_server_async.rs"

[[example]]
name = "task_orchestration"
path = "examples/task_orchestration.rs"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[dependencies]
eventloop_async_research_macros = { path = "macros" }
